--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.11.0",
     "next": "^15.4.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
